--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.1",
     "mongoose": "^7.4.2"
