--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.1",
+    "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.2"
   }
 }
